# rust_playlist_project

./: .env  .env.example  Cargo.toml  Dockerfile  docker-compose.yaml  readme.md  spec.yaml  sqlx-data.json
.github/: general.yml
.github/workflows/: general.yml
configuration/: base.yaml
migrations/: 0001_init_db.sql  0002_init_pivot_tables.sql  0003_add_session_table.sql
postman/: playlist_project.postman_collection.json
scripts/: init_db.sh
src/: app.rs  config.rs  lib.rs  main.rs  telemetry.rs
src/authentication/: mod.rs  password.rs
src/database/: connection.rs  mod.rs
src/database/session/: model.rs  repository.rs
src/database/user/: model.rs  repository.rs
src/domain/: mod.rs  new_registration.rs  user_email.rs  user_password.rs
src/routes/: health_check.rs  login.rs  mod.rs  register.rs
src/server/: error.rs  mod.rs
src/server/api/: mod.rs  user_controller.rs
src/server/dtos/: session_dto.rs  user_dto.rs
src/server/extractors/: mod.rs  user_agent_extractor.rs  validation_extractor.rs
src/server/services/: mod.rs  session_services.rs  user_services.rs
src/server/users/: login_controller.rs  mod.rs  registration_controller.rs
src/server/utils/: argon_utils.rs  jwt_utils.rs
src/types/: hashed_password.rs  mod.rs  user_email.rs  user_password.rs
tests/: health_check.rs  registation.rs
tests/common/: mod.rs  types.rs  user_test_utils.rs
tests/routes/: health_check.rs  login.rs  mod.rs  registration.rs
tests/routes/users/: mod.rs  refresh.rs  signin.rs  signout.rs  signup.rs  update.rs  whoami.rs
