[package]
name = "playlist_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "playlist_project"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version ="0.6.18"}
log = "0.4.17"
clap = { version = "4.2.1", features = ["derive"] }
tower = "0.4.13"
tracing = "0.1.37"
tower-http = { version = "0.4.0", features = ["full"] }
httpc-test = "0.1.1"
serde_json = "1.0.96"
tower-cookies = "0.9.0"
async-trait = "0.1.68"
strum_macros = "0.24.3"
uuid = {version ="1.3.1", features = ["v4"]}
serde_with = "3.0.0"
serde_urlencoded = "0.7.1"
base64 = "0.21.0"
reqwest = "0.11.16"
sqlx = { version = "0.6", features = [ "chrono", "json", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "uuid" ] }
dotenvy = "0.15.7"
chrono = {version = "0.4.24", features =  ["serde"]}
envy = "0.4.2"
jsonwebtoken = "8.3.0"
once_cell = "1.17.1"
rand_chacha = "0.3.1"
rand_core = { version = "0.6.4", features = ["std"] }
# types = {path = "../types"}
hyper = "0.14.26"
secrecy = { version = "0.8", features = ["serde"] }
serde-aux = "4.2.0"
config = { version = "0.13", default-features = false, features = ["yaml"] }
anyhow = "1.0.71"
argon2 = {version = "0.5.0", features = ["std"]}
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"
rand = { version = "0.8.5", features=["std_rng"] }
axum_session = { version = "0.2.3", features = [ "postgres-rustls"] }
validator = "0.16.0"
zeroize_derive = "1.4.2"

[dev-dependencies]
fake = "2.6.1"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
