[package]
name = "playlist_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "playlist_project"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
axum = { version ="0.6.18"}
log = "0.4.17"
clap = { version = "4.2.7", features = ["derive","env"] }
tower = "0.4.13"
tracing = "0.1.37"
tower-http = { version = "0.4.0", features = ["full"] }
serde_json = "1.0.96"
async-trait = "0.1.68"
uuid = {version ="1.3.1", features = ["v4", "serde"]}
reqwest = {version= "0.11.18", features= ["json", "cookies"]}
sqlx = { version = "0.6.2", features = [ "chrono", "time", "json", "macros", "migrate", "offline", "postgres", "runtime-tokio-rustls", "uuid" ] }
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
rand_core = { version = "0.6.4", features = ["std"] }
secrecy = { version = "0.8", features = ["serde"] }
config = { version = "0.13", default-features = false, features = ["yaml"] }
anyhow = "1.0.71"
argon2 = {version = "0.5.0", features = ["std"]}
tracing-subscriber = "0.3.17"
thiserror = "1.0.40"
rand = { version = "0.8.5", features=["std_rng"] }
validator = { version = "0.16.0", features = ["derive"] }
http-body = "0.4.5"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
axum-extra = { version = "0.7.4", features = ["cookie"] }

[dev-dependencies]
fake = "2.6.1"
claims = "0.7.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
